# ZeroPass-Protocol

./: .dockerignore  .env.example  .gitignore  MVP.md  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml  deploy.yml
backend/: init_db.py  main.py  requirements.txt
backend/core/: config.py  logging.py  rate_limit.py  security.py  security_engine.py
backend/core/proto/: __init__.py
backend/db/: database.py  redis.py
backend/grpc_gen/: security_pb2.py  security_pb2_grpc.py
backend/models/: user.py
backend/routers/: admin.py  audit.py  auth.py  oauth.py  users.py
backend/scratch/: test_custom_captcha.py
backend/services/: alerts.py  audit.py  recovery.py  threat_detection.py
cpp-security-engine/: .dockerignore  CMakeLists.txt
cpp-security-engine/proto/: security.proto
cpp-security-engine/src/: crypto.cpp  crypto.h  main.cpp
docker/: backend.Dockerfile  cpp-engine.Dockerfile  frontend.Dockerfile
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/admin/dashboard/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/lib/: webauthn.ts
monitoring/: prometheus.yml
nginx/: maintenance.html  nginx.conf  nginx.prod.conf
scripts/: backup_db.sh  init-ssl.sh
terraform/: main.tf  variables.tf
